[package]
name = "systems"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { version = "0.11.2" }
components = { path = "../components" }
utilities = { path = "../utilities" }
log = "0.4.17"
rand = "0.8.5"

[features]
default = []
dynamic = ["bevy/dynamic_linking", "components/dynamic"]
