[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" }

[features]
default = []
dynamic = ["bevy/dynamic_linking"] # , "components/dynamic"

